fsd + prettier config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,14 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "baseUrl": "./src",
+  "paths": {
+    "@app/*": ["app/*"],
+    "@shared/*": ["shared/*"],
+    "@entities/*": ["entities/*"],
+    "@features/*": ["features/*"],
+    "@widgets/*": ["widgets/*"],
+    "@pages/*": ["pages/*"]
+  }
 }
