--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,16 +21,17 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    "paths": {
+      "@/*": ["./src/*"],
+      "@app/*": ["./src/app/*"],
+      "@shared/*": ["./src/shared/*"],
+      "@entities/*": ["./src/entities/*"],
+      "@features/*": ["./src/features/*"],
+      "@widgets/*": ["./src/widgets/*"],
+      "@pages/*": ["./src/pages/*"]
+    }
   },
-  "include": ["src"],
-  "baseUrl": "./src",
-  "paths": {
-    "@app/*": ["app/*"],
-    "@shared/*": ["shared/*"],
-    "@entities/*": ["entities/*"],
-    "@features/*": ["features/*"],
-    "@widgets/*": ["widgets/*"],
-    "@pages/*": ["pages/*"]
-  }
+  "include": ["src"]
 }
