--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.13.8",
+    "@hello-pangea/dnd": "^18.0.1",
     "antd": "^5.26.5",
+    "dayjs": "^1.11.13",
     "graphql": "^16.11.0",
     "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
