--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "type": "commonjs",
   "dependencies": {
     "apollo-server": "^3.13.0",
+    "cors": "^2.8.5",
     "graphql": "^16.11.0"
   },
   "devDependencies": {
