--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@apollo/client": "^3.13.8",
     "@hello-pangea/dnd": "^18.0.1",
     "antd": "^5.26.5",
+    "apollo-server-micro": "^3.13.0",
     "dayjs": "^1.11.13",
     "graphql": "^16.11.0",
     "mobx": "^6.13.7",
