--- a/api/package.json
+++ b/api/package.json
@@ -37,7 +37,9 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.3",
     "nodemon": "^3.1.10",
+    "pino-pretty": "^13.0.0",
     "prettier": "^3.6.2",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.37.0"
   }
